<resources>
    <string name="app_name">Appointment planner</string>
    <!-- Strings used for fragments for navigation -->
    <string name="username">Username</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="cancel">Cancel</string>
    <string name="email_adress"> E-Mail Adresse</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="search">Search in Notes </string>
    <string name="title">Title</string>
    <string name="type_note_here">Type Note Here ..</string>
    <string name="note_option">Note Option</string>
    <string name="add_image">Add Image</string>
    <string name="add_Url">Add URL</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">ADD</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_text">do you want to delete this Note ? </string>
    <string name="my_todos">My Todos</string>
    <string name="type_your_todo_here">type your todo here ..</string>
    <string name="done">Done</string>
    <string name="search_in_todos">search in todos</string>
    <string name="add_todo">add Todo</string>
    <string name="task_done">Task Done</string>
</resources>