<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="#4556B6">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="392dp"
        android:layout_height="690dp"
        android:layout_marginBottom="4dp"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/regbt"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="540dp"
            android:layout_marginBottom="316dp"
            android:background="@drawable/buttonshapedesign"
            android:text="@string/Register"
            android:textAllCaps="false"
            android:textSize="16dp"
            app:iconTint="#8BC34A" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/kopf_design"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="65sp"
            android:textStyle="bold|italic"
            android:typeface="normal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameinputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="373dp"
            android:layout_height="97dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="130dp"
            android:hint="@string/username"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true"
            app:helperTextTextColor="#8BC34A"
            app:startIconDrawable="@drawable/icon_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameinput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:imeOptions="actionNext"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emaillayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="373dp"
            android:layout_height="97dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="220dp"
            android:hint="@string/email_adress"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true"
            app:helperTextTextColor="#8BC34A"
            app:startIconDrawable="@drawable/icon_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailinput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="373dp"
            android:layout_height="97dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="310dp"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="password_toggle"
            app:helperTextEnabled="true"
            app:helperTextTextColor="#8BC34A"
            app:startIconDrawable="@drawable/icon_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordinput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatpasswordlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="373dp"
            android:layout_height="97dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="430dp"
            android:hint="@string/repeatpassword"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="password_toggle"
            app:helperTextEnabled="true"
            app:helperTextTextColor="#8BC34A"
            app:startIconDrawable="@drawable/icon_repeat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatpasswordinput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
        android:id="@+id/strich"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="580dp"
        android:text="_______ "
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="203dp"
            android:layout_height="37dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="620dp"
            android:text="You have an account ? "
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/login"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="620dp"
            android:text="Login"
            android:textAlignment="textStart"
            android:clickable="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/capitalLetterTextview"
            android:layout_width="120dp"
            android:layout_height="16dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="410dp"
            android:layout_weight="1"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/numberTextview"
            android:layout_width="90dp"
            android:layout_height="16dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="410dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/specialCharactersTextview"
            android:layout_width="155dp"
            android:layout_height="16dp"
            android:layout_marginLeft="227dp"
            android:layout_marginTop="410dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="294dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/slogen" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_todo"
        android:layout_width="180dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/time" />

    <Button
        android:id="@+id/back"
        android:layout_width="67dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#003700B3"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />


</androidx.constraintlayout.widget.ConstraintLayout>